--- a/docker-compose/compose.yaml
+++ b/docker-compose/compose.yaml
@@ -3,12 +3,12 @@ services:
   zookeeper:
     image: zookeeper
     ports:
-      - "2181:2181"
+      - 2181:2181
 
   kafka:
     image: confluentinc/cp-kafka
     ports:
-      - "9092:9092"
+      - 9092:9092
     environment:
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://192.168.29.246:9092
       - KAFKA_ZOOKEEPER_CONNECT=192.168.29.246:2181
@@ -36,11 +36,11 @@ services:
     depends_on:
       - kafka
     environment:
-      - KAFKA_BOOTSTRAP_SERVERS=${KAFKA_BOOTSTRAP_SERVERS}
+      - KAFKA_BOOTSTRAP_SERVERS=$KAFKA_BOOTSTRAP_SERVERS
     volumes:
       - ../producer/client:/app
     ports:
-      - "4000:4000"
+      - 4000:4000
   consumer:
     build: ../consumer/server
     container_name: consumer
